# CryptBank

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/block_info_database/: block_info_database.h  block_record.h
core/include/chain/: chain.h
core/include/chain_writer/: chain_writer.h  file_info.h  undo_block.h
core/include/coin_database/: coin.h  coin_database.h  coin_record.h  undo_coin_record.h
core/include/crypto/: cryptcrypto.h
core/include/db/: db.h
core/include/primitives/: block.h  block_header.h  transaction.h  transaction_input.h  transaction_output.h
core/include/proto/: crypt.pb.h  crypt.proto
core/src/block_info_database/: block_info_database.cpp  block_record.cpp
core/src/chain/: chain.cpp
core/src/chain_writer/: chain_writer.cpp  file_info.cpp  undo_block.cpp
core/src/coin_database/: coin.cpp  coin_database.cpp  coin_record.cpp  undo_coin_record.cpp
core/src/crypto/: cryptcrypto.cpp
core/src/db/: db.cpp
core/src/primitives/: block.cpp  block_header.cpp  transaction.cpp  transaction_input.cpp  transaction_output.cpp
core/src/proto/: crypt.pb.cc
test/: CMakeLists.txt  CMakeLists.txt.in
test/block_info_database/: CMakeLists.txt  block_info_db_tests.cpp  main.cpp
test/chain/: CMakeLists.txt  chain_test.cpp
test/chain_writer/: CMakeLists.txt  chain_writer_tests.cpp
test/coin_database/: CMakeLists.txt  coin_database_tests.cpp
test/crypto/: CMakeLists.txt  crypto_tests.cpp
test/db/: CMakeLists.txt  db_tests.cpp
test/primitives/: CMakeLists.txt  primitives_tests.cpp
